2004-11-04  Vincent Noel  <vnoel@cox.net>

	* logrtns.c (isLogFile): Use the GnomeVFSResult to check the file
	permissions instead of calling an extra gnome_vfs_get_file_info.

2004-11-03  Vincent Noel  <vnoel@cox.net>

	* logview.c (CloseLogMenu): Close the calendar when closing the log.
	(CloseLogMenu): Same for details window.
	(LoadLogMenu): Don't destroy the filechooser when we're done with
	it, keep it around for later.

	* calendar.c (CalendarMenu): Make sure to re-create calendar data
	if there is none.

	* logview.h: Remove unused var.

	* logrtns.c (ReadLogStats): Remove unused variables.

	* monitor.c (monitor_stop): Close the handle.

	* logrtns.c (ReadLastPage): Only keep a handle opened on the log
	if we are monitoring. Otherwise, close all handles.
	(UpdateLogStats): Unused. Move into the FIXME-functions cemetery.

	* misc.c (MakeErrorDialog): Use new gtk+ HIG message dialogue API.
	* logrtns.c (OpenLogFile): Ditto.

	* logview.c (toggle_monitor): Prevent enabling monitoring with the
	key shortcut for zipped files.
	(logview_search): Disable search for monitored files.
	(logview_menus_set_state): Add some checks for NULL pointers.

	* logrtns.c (file_is_zipped): New.
	(OpenLogFile): Check if the file is zipped, and unzip it in a temp
	directory if it is.
	(ReadLogStats): Remove debug spew.

	* logview.c (SetDefaultUserPrefs): When trying to open the logfile
	saved in gconf, fail silently if the file is not a log. 
	(logview_set_window_title): When opening a zipped log, use the
	name of the original zipfile and not the unzipped file.
	(logview_menus_set_state): Don't allow monitoring for zipped logs.

	* info.c: Mark the info strings for translation.

2004-11-02  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_set_window_title): Use a display name if the
	log was opened through a temporary file.

	* logrtns.c (OpenLogFile): Add detection and opening of zipped archive.

	* logview.c (logview_create_window): Use g_signal_connect instead