@@ -2,6 +2,7 @@
 
 	* logrtns.c (isLogFile): Use the GnomeVFSResult to check the file
 	permissions instead of calling an extra gnome_vfs_get_file_info.
+	(GetLogSize): remove. Not used anywhere anymore.
 
 2004-11-03  Vincent Noel  <vnoel@cox.net>
 
